# XRoboToolkit-Teleop-Sample-Python

./: .gitignore  DUAL_ARM_FIX_SUMMARY.md  GEMINI.md  README.md  history.md  installation_summary.md  pyproject.toml  run_http_client.sh  run_jaka_driver.sh  run_jaka_teleop.sh  setup.sh  setup_conda.sh  teleop_details.md  test_dual_arm_fixed.py  test_import.py  test_msgpack.py  urdf_coordinate_comparison.md  verify_dual_arm_fix.py
assets/jaka/: dual_arm.urdf  dual_arm_fixed.urdf  robot.urdf
assets/universal_robots_ur5e/: dual_ur5e.urdf  dual_ur5e.xml  scene_double.xml  ur5e_double.xml
frame_sync/: CMakeLists.txt  README_CONFIG.md  package.xml
frame_sync/config/: frame_sync.yaml
frame_sync/include/frame_sync/: ConsoleUI.hpp  DataCollecter.hpp  DataWriter.hpp
frame_sync/launch/: capture.launch.py  start_all.launch.py  start_full_system.launch.py  start_sensors.launch.py
frame_sync/src/: ConsoleUI.cpp  DataCollecter copy.cpp  DataCollecter.cpp  DataWriter.cpp  frame_sync_node copy.cpp  frame_sync_node.cpp  frame_sync_node.cpp.bk  frame_sync_node.cpp.bk3.freq_ctl
frame_sync_msgs/: CMakeLists.txt  package.xml
frame_sync_msgs/msg/: SyncedData.msg
install/: local_setup.sh  setup.sh
install/jaka_robot_driver/share/jaka_robot_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jaka_robot_driver/share/jaka_robot_driver/cmake/: jaka_robot_driverConfig.cmake
install/jaka_robot_driver/share/jaka_robot_driver/config/: jaka_driver_params.yaml
install/jaka_robot_driver/share/jaka_robot_driver/launch/: jaka_driver.launch.py
install/jaka_robot_interfaces/share/jaka_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jaka_robot_interfaces/share/jaka_robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_jaka_robot_interfaces__rosidl_generator_cExport-noconfig.cmake  export_jaka_robot_interfaces__rosidl_generator_cExport.cmake  export_jaka_robot_interfaces__rosidl_generator_cppExport.cmake  export_jaka_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_jaka_robot_interfaces__rosidl_generator_pyExport.cmake  export_jaka_robot_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_jaka_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_jaka_robot_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_jaka_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  jaka_robot_interfacesConfig-version.cmake  jaka_robot_interfacesConfig.cmake  jaka_robot_interfaces__rosidl_typesupport_cExport-noconfig.cmake  jaka_robot_interfaces__rosidl_typesupport_cExport.cmake  jaka_robot_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  jaka_robot_interfaces__rosidl_typesupport_cppExport.cmake  jaka_robot_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  jaka_robot_interfaces__rosidl_typesupport_introspection_cExport.cmake  jaka_robot_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  jaka_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/jaka_robot_interfaces/share/jaka_robot_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/jaka_robot_interfaces/share/jaka_robot_interfaces/msg/: CartesianPose.idl  CartesianPose.msg  JointValue.idl  JointValue.msg  MoveMode.idl  MoveMode.msg  RobotStateDual.idl  RobotStateDual.msg  ServoCartCommand.idl  ServoCartCommand.msg  ServoJointCommand.idl  ServoJointCommand.msg
install/jaka_robot_interfaces/share/jaka_robot_interfaces/srv/: ClearError.idl  ClearError.srv  ClearError_Request.msg  ClearError_Response.msg  JointToCartesian.idl  JointToCartesian.srv  JointToCartesian_Request.msg  JointToCartesian_Response.msg  MultiMovJ.idl  MultiMovJ.srv  MultiMovJ_Request.msg  MultiMovJ_Response.msg  MultiMovL.idl  MultiMovL.srv  MultiMovL_Request.msg  MultiMovL_Response.msg  ServoMovJ.idl  ServoMovJ.srv  ServoMovJ_Request.msg  ServoMovJ_Response.msg
jaka_robot_interfaces/: CMakeLists.txt
jaka_robot_interfaces/msg/: MultiMovJCommand.msg  ServoJointCommand.msg
jaka_robot_interfaces/srv/: ClearError.srv
jiazhua_driver/: CMakeLists.txt  package.xml
jiazhua_driver/include/jiazhua_driver/: jiazhua.h
jiazhua_driver/src/: jiazhua.cpp  jiazhua_node.cpp
jiazhua_interfaces/: CMakeLists.txt  package.xml
jiazhua_interfaces/msg/: JiaZhuaDualCmd.msg
log/: latest_build
robot_state_converter/: package.xml  setup.cfg  setup.py
robot_state_converter/robot_state_converter/: converter.py
scripts/: arm_control.py  dual_arm_control.py  head_and_arm_control_demo.py  head_control.py  teleop_dual_ur5e_mujoco.py  ur5e_demo.py  ur5e_dual_arm_demo.py  vis_mjcf.py  vis_urdf.py
scripts/hardware/: dual_arm_control.py  head_control.py  teleop_a1x_hardware.py  teleop_arx_hardware.py  teleop_dual_a1x_hardware.py  teleop_dual_arx_r5_hardware.py  teleop_dual_ur5e_hardware.py  teleop_r1lite_hardware.py
scripts/misc/: test_data_log_analysis.py
scripts/ros2/: teleop_jaka_ros2.py  teleop_jaka_ros2_copy.py
scripts/simulation/: teleop_dual_a1s_mujoco.py  teleop_dual_a1x_mujoco.py  teleop_dual_ur5e_mujoco.py  teleop_flexiv_rizon4s_mujoco.py  teleop_inspire_hand_placo.py  teleop_jaka_placo.py  teleop_shadow_hand_mujoco.py  teleop_shadow_hand_placo.py  teleop_x7s_placo.py
scripts/visualization/: rs_cam_streaming.py  (+2 more)
teleop_demo_mujoco/: mujoco_teleop_controller.py  mujoco_teleop_controller_single_effector.py  path_utils.py
teleop_demo_python/: mujoco_teleop_controller.py
vla/: http_client.py  jaka_vla.py  launch_vla_system.sh  pi05_client.py  test_msgpack.py  test_msgpack_simple.py
(+233 files in other folders)
