[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop_demo_mujoco"
version = "0.1.0"
description = "Teleoperation demo with MuJoCo and UR5 robot"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mujoco",
    "numpy",
    "meshcat",
    "placo",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["teleop_demo_mujoco"]

[tool.setuptools.package-data]
teleop_demo_mujoco = ["../assets/**/*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88