[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrobotoolkit_teleop"
version = "0.1.0"
description = "Teleoperation demo with MuJoCo and UR5 robot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zhigen", email = "zhaozhigen@gmail.com"}
]
dependencies = [
    "mujoco",
    "numpy",
    "meshcat",
    "placo==0.6.4",
    "ur_rtde",
    "dynamixel-sdk",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["xrobotoolkit_teleop"]

[tool.setuptools.package-data]
xrobotoolkit_teleop = ["../assets/**/*"]
