<?xml version="1.0"?>
<package format="3">
  <name>jiazhua_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for jiazhua claw</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>jiazhua_interfaces</build_depend>  <!-- 新增加的 -->
  <exec_depend>jiazhua_interfaces</exec_depend>    <!-- 新增加的 -->
  <depend>frame_sync_msgs</depend>  <!-- 新增加的 -->

  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
   <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
