<?xml version="1.0"?>
<package format="3">
  <name>jaka_robot_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver node for JAKA dual-arm robot using official SDK.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建/运行依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jaka_robot_interfaces</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <!-- 运行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jaka_robot_interfaces</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>